[TEST] fix(test): add missing env var for test case 4
- committer's note:
  disregard the last commit as it accidently specified test case 5 and did not add a 5th test case, but instead a fourth.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,7 @@ on:
 
 env:
   HAS_TOKEN: ${{ secrets.TEST_TOKEN != '' }}
+  ACTION_COMMITS: ${{ toJSON(github.event.commits) }}
 
 jobs:
   test_case_1:
